<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/phoneyellow"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Start">


    <Button
        android:id="@+id/change_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/change_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/volume_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_button"
        app:layout_constraintEnd_toEndOf="@+id/change_button"
        app:layout_constraintStart_toStartOf="@+id/change_button"
        tools:layout_editor_absoluteY="223dp" />

    <Button
        android:id="@+id/animation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="332dp"
        android:text="@string/animation_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/volume_button"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/volume_button" />
</androidx.constraintlayout.widget.ConstraintLayout>