<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/phoneyellow"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Start">


    <ImageButton
        android:id="@+id/friends"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/smallredbutton"
        android:text="@string/friends"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/select_mode"
        app:layout_constraintStart_toStartOf="@+id/select_mode"
        app:layout_constraintTop_toBottomOf="@+id/select_mode"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textfriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/font_family"
        android:text="@string/friends"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/friends"
        app:layout_constraintEnd_toEndOf="@+id/friends"
        app:layout_constraintStart_toStartOf="@+id/friends"
        app:layout_constraintTop_toTopOf="@+id/friends"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textrulesfriends"
        android:layout_width="297dp"
        android:layout_height="99dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_family"
        android:text="@string/rulesfriends"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/friends"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="@+id/friends"
        app:layout_constraintTop_toBottomOf="@+id/friends"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/strangers"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/smallredbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textrulesfriends"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="@+id/textrulesfriends"
        app:layout_constraintTop_toBottomOf="@+id/textrulesfriends"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textstrangers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/font_family"
        android:text="@string/strangers"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/strangers"
        app:layout_constraintEnd_toEndOf="@+id/strangers"
        app:layout_constraintStart_toStartOf="@+id/strangers"
        app:layout_constraintTop_toTopOf="@+id/strangers"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textrulesstrangers"
        android:layout_width="351dp"
        android:layout_height="91dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/font_family"
        android:text="@string/rulesstrangers"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/strangers"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/strangers"
        app:layout_constraintTop_toBottomOf="@+id/strangers"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/select_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_mode"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>