<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/phoneyellow"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Start">

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/font_family"
        android:text="@string/code"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/randomNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/code"
        app:layout_constraintVertical_bias="0.081"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/friends"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/smallredbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_mode"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/friends2"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/smallred2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_mode"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textfriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/font_family"
        android:text="@string/friends"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/friends"
        app:layout_constraintEnd_toEndOf="@+id/friends"
        app:layout_constraintStart_toStartOf="@+id/friends"
        app:layout_constraintTop_toTopOf="@+id/friends"
        tools:ignore="MissingConstraints" />


    <ImageButton
        android:id="@+id/strangers"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/smallredbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friends"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/strangers2"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/smallred2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friends"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"  />

    <TextView
        android:id="@+id/textstrangers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/font_family"
        android:text="@string/strangers"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/strangers"
        app:layout_constraintEnd_toEndOf="@+id/strangers"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/strangers"
        app:layout_constraintTop_toTopOf="@+id/strangers"
        app:layout_constraintVertical_bias="0.561"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/select_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/select_mode"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomNumberTextView"
        app:layout_constraintVertical_bias="0.189"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/startButton2"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/smallgreenbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_family"
        android:text="@string/start_button"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/startButton2"
        app:layout_constraintEnd_toEndOf="@+id/startButton2"
        app:layout_constraintStart_toStartOf="@+id/startButton2"
        app:layout_constraintTop_toTopOf="@+id/startButton2"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>