<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/phoneyellow"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SettingsProfile">

    <ImageButton
        android:id="@+id/bear_button"
        android:layout_width="109dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputavatar"
        app:layout_constraintVertical_bias="0.0" />
    <ImageView
        android:visibility="invisible"
        android:id="@+id/bear2_button"
        android:layout_width="109dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bear2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputavatar"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/owl_button"
        android:layout_width="119dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/owl"
        app:layout_constraintBottom_toBottomOf="@+id/sheep_button"
        app:layout_constraintEnd_toStartOf="@+id/sheep_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horse_button"
        app:layout_constraintVertical_bias="0.527" />
    <ImageView
        android:visibility="invisible"
        android:id="@+id/owl2_button"
        android:layout_width="119dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/owl2"
        app:layout_constraintBottom_toBottomOf="@+id/sheep_button"
        app:layout_constraintEnd_toStartOf="@+id/sheep_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horse_button"
        app:layout_constraintVertical_bias="0.527" />
    <ImageButton
        android:id="@+id/rabbit_button"
        android:layout_width="105dp"
        android:layout_height="152dp"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rabbit"
        app:layout_constraintBottom_toBottomOf="@+id/bear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/bear_button"
        app:layout_constraintTop_toTopOf="@+id/bear_button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:visibility="invisible"
        android:id="@+id/rabbit2_button"
        android:layout_width="105dp"
        android:layout_height="152dp"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rabbit2"
        app:layout_constraintBottom_toBottomOf="@+id/bear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/bear_button"
        app:layout_constraintTop_toTopOf="@+id/bear_button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/sheep_button"
        android:layout_width="112dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/sheep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bear_button"
        app:layout_constraintVertical_bias="0.0" />
    <ImageView
        android:visibility="invisible"
        android:id="@+id/sheep2_button"
        android:layout_width="112dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/sheep2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bear_button"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/bird_button"
        android:layout_width="127dp"
        android:layout_height="111dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/bird"
        app:layout_constraintBottom_toBottomOf="@+id/sheep_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sheep_button"
        app:layout_constraintTop_toBottomOf="@+id/rabbit_button"
        app:layout_constraintVertical_bias="0.54" />
    <ImageView
        android:visibility="invisible"
        android:id="@+id/bird2_button"
        android:layout_width="127dp"
        android:layout_height="111dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/bird2"
        app:layout_constraintBottom_toBottomOf="@+id/sheep_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sheep_button"
        app:layout_constraintTop_toBottomOf="@+id/rabbit_button"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/inputavatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/inputavatar"
        android:textColor="@color/dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/horse_button"
        android:layout_width="113dp"
        android:layout_height="136dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/horse"
        app:layout_constraintBottom_toBottomOf="@+id/bear_button"
        app:layout_constraintEnd_toStartOf="@+id/bear_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bear_button"
        app:layout_constraintVertical_bias="0.541" />
    <ImageView
        android:visibility="invisible"
        android:id="@+id/horse2_button"
        android:layout_width="113dp"
        android:layout_height="136dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/horse2"
        app:layout_constraintBottom_toBottomOf="@+id/bear_button"
        app:layout_constraintEnd_toStartOf="@+id/bear_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bear_button"
        app:layout_constraintVertical_bias="0.541" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="221dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textColorHighlight="@color/dark"
        android:textColorHint="@color/dark"
        android:textColorLink="@color/dark"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputname"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="@+id/inputname"
        app:layout_constraintTop_toBottomOf="@+id/inputname"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/inputname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/inputname"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/save_button"
        android:layout_width="275dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/middleredbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sheep_button"
        app:layout_constraintVertical_bias="0.287"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_family"
        android:text="@string/save"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="@+id/save_button"
        app:layout_constraintStart_toStartOf="@+id/save_button"
        app:layout_constraintTop_toTopOf="@+id/save_button"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
